--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     ]
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.37",
+    "gatsby-plugin-styled-components": "^3.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "styled-components": "^5.1.1",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
